# sokoban_solver

./: .gitignore  CMakeLists.txt  todo.txt
src/: Block.hpp  Board.cpp  Board.hpp  BoardState.cpp  BoardState.hpp  Box.cpp  Box.hpp  FeatureSpace.cpp  FeatureSpace.hpp  FeatureSpaceCell.cpp  FeatureSpaceCell.hpp  GameState.hpp  Object.cpp  Object.hpp  PackingPlanFeatureSpaceCell.cpp  PackingPlanFeatureSpaceCell.hpp  Pusher.hpp  Solver.cpp  Solver.hpp  main.cpp
